syntax = "proto3";
package Simple;

option csharp_namespace = "Transport.Description";

message Empty {
}

message Timestamp {
    // Represents seconds of UTC time since Unix epoch
    // 1970-01-01T00:00:00Z. Must be from 0001-01-01T00:00:00Z to
    // 9999-12-31T23:59:59Z inclusive.
    int64 seconds = 1;

    // Non-negative fractions of a second at nanosecond resolution. Negative
    // second values with fractions must still have non-negative nanos values
    // that count forward in time. Must be from 0 to 999,999,999
    // inclusive.
    int32 nanos = 2;
}

message ServerResponse {
    enum MessageStatus {
        Ack = 0;
        Nack = 1;
    }

    MessageStatus status = 1;
}

message HeartBeat {
    Timestamp tick = 1;
}

message Price {
    string symbol = 1;
    int64 ref_price = 2;
}

message StreamUpdate {
    oneof message_type {
      HeartBeat pulse = 1;
      Price price = 2;
    }
  }


service MessageServer {
    rpc ClientConnect (Empty) returns (ServerResponse) {}
    rpc CallStream (Empty) returns (stream StreamUpdate) {}
}